@@ -70,6 +70,26 @@ EXTRA_DIST += admin/check-style-common.awk \
               admin/check-style-shell.awk \
               admin/check-style.sh
 
+.PHONY: admin/revision.h
+admin/revision.h:
+	@if [ -n "$(MTN)" -a -d $(top_srcdir)/_MTN ]; then \
+	    MTN="$(MTN)" ROOT="$(top_srcdir)" \
+	        $(top_srcdir)/admin/generate-revision.sh >admin/revision.h; \
+	else \
+	    rm -f admin/revision.h; \
+	fi
+CLEANFILES = admin/revision.h
+
+admin/revision-dist.h: admin/revision.h
+	@if [ -f admin/revision.h ]; then \
+	    cp admin/revision.h admin/revision-dist.h; \
+	    echo '#define PACKAGE_REVISION_CACHED 1' \
+	        >>admin/revision-dist.h; \
+	else \
+	    [ -f admin/revision-dist.h ]; \
+	fi
+EXTRA_DIST += admin/revision-dist.h
+
 # -------------------------------------------------------------------------
 # `atf' directory.
 # -------------------------------------------------------------------------
@@ -130,7 +150,7 @@ atfdir = $(includedir)/atf
 # -------------------------------------------------------------------------
 
 man_MANS = doc/atf.7
-CLEANFILES = doc/atf.7
+CLEANFILES += doc/atf.7
 EXTRA_DIST += doc/atf.7.in
 
 dist_man_MANS = doc/atf-formats.5 \
@@ -664,5 +684,23 @@ tools_atf_run_SOURCES = tools/atf-run.cpp
 tools_atf_run_LDADD = -latf
 tools_atf_run_LDFLAGS = -L.
 dist_man_MANS += tools/atf-run.1
+
+bin_PROGRAMS += tools/atf-version
+tools_atf_version_SOURCES = tools/atf-version.cpp
+tools_atf_version_LDADD = -latf
+tools_atf_version_LDFLAGS = -L.
+dist_man_MANS += tools/atf-version.1
+
+tools/atf-version.cpp: tools/revision.h
+
+tools/revision.h: admin/revision.h admin/revision-dist.h
+	@if [ -f admin/revision.h ]; then \
+	    cmp -s admin/revision.h tools/revision.h || \
+	        cp admin/revision.h tools/revision.h; \
+	else \
+	    cmp -s admin/revision-dist.h tools/revision.h || \
+	        cp admin/revision-dist.h tools/revision.h; \
+	fi
+CLEANFILES += tools/revision.h
 
 # vim: syntax=make:noexpandtab:shiftwidth=8:softtabstop=8
